--- a/gpt bot.ipynb
+++ b/gpt bot.ipynb
@@ -1856,7 +1856,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyC103mDI5o5X7Vn1cwSStMDUyzqKs8rvwo8\"  # Replace with your actual Gemini API key\n"
+    "os.environ[\"GOOGLE_API_KEY\"] = "API key"  # Replace with your actual Gemini API key\n"
    ]
   },
   {
